Fixed (css), entries flowing over, on small screens (i.e. phone screen)

--- a/static/initial.css
+++ b/static/initial.css
@@ -1,34 +1,2 @@
-.toggle-dark-mode {
-    /* position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 9999; */
-    margin-top: 30px;
-}
 
-.new-data-instance-button {
-    background-color: #199319;
-    color: white;
-    padding: 15px 25px;
-    text-decoration: none;
-    border-radius: 8px;
-}
-.new-data-instance-button:hover {
-    background-color: #223094;
-}
-
-h1 {
-    text-align: center;
-}
-img.center {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-}
-img.header-logo{
-    height:90px;
-}
-.book-img {
-    width:250px;
-    height:auto;
-}
+/** @Tor: I moved this to styles.css.  Not sure why this file was separate **/
